k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moncif-portfolio-deployment
  labels:
    app: portfolio
  name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: melkassimi/melkassimi-portfolio:0.1
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        name: portfolio
        ports:
        - containerPort: 50051
