k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portfolio 
  name: portfolio-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 50051
      name: http
  type: ClusterIP
  selector: 
    app: portfolio
