k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-portfolio
spec:
  ingressClassName: nginx 
  rules:
  - host: portfolio.moncif-elkassimi.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: portfolio-service 
            port:
              number: 80
  tls: []
